syntax = "proto3";

package proto;
option go_package = ".;proto";

service PodExecService {
    // Establishes a bidirectional stream for executing commands in a pod
    rpc Exec(stream ExecRequest) returns (stream ExecResponse) {};
}

message ExecRequest {
    oneof input {
        // Initial configuration for the exec session
        ExecConfig config = 1;
        
        // Input data to send to the process's stdin
        bytes stdin = 2;
        
        // Terminal resize events
        TerminalSize resize = 3;
    }
}

message ExecConfig {
    string namespace = 1;
    string pod_name = 2;
    string container = 3;
    repeated string command = 4; // e.g. ["bash"]
    bool tty = 5;
}

message TerminalSize {
    uint32 width = 1;
    uint32 height = 2;
}

message ExecResponse {
    oneof output {
        // Output data from the process's stdout
        bytes stdout = 1;
        
        // Output data from the process's stderr
        bytes stderr = 2;
        
        // Session closed message
        bool closed = 3;
    }
}